--- a/Day_3.ipynb
+++ b/Day_3.ipynb
@@ -6,7 +6,7 @@
       "name": "Day_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP/UfzxUai47adJikclqUCR",
+      "authorship_tag": "ABX9TyPTAOFgIYBWSBM2FNFN4aJE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "p7nnlVeXwbdW",
-        "outputId": "0ac23aa1-ac4e-4a58-8c2d-b854c43f2db6"
+        "outputId": "b492748a-288a-4444-bcd8-0505167125f5"
       },
       "outputs": [
         {
@@ -78,9 +78,9 @@
             "\n",
             "Welcome to Treasure Island.\n",
             "Your mission is to find the treasure.\n",
-            "left or right?left\n",
-            "swim or wait?wait\n",
-            "Which door?yellow\n",
+            "You're at a crossroad. Where do you want to go? Type 'left' or 'right'.left\n",
+            "You've come to a lake. There is an island in the middle of the lake. Type 'wait' to wait for a boat, or 'swim' to swim across.wait\n",
+            "You arrive at the island unharmed. There is a house with three doors; on red, one yellow and one blue. Which color do you choose?yellow\n",
             "You Win!\n"
           ]
         }
@@ -114,11 +114,11 @@
         "#https://www.draw.io/?lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=Treasure%20Island%20Conditional.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1oDe4ehjWZipYRsVfeAx2HyB7LCQ8_Fvi%26export%3Ddownload\n",
         "\n",
         "#Write your code below this line 👇\n",
-        "step = input('left or right?')\n",
+        "step = input(\"You're at a crossroad. Where do you want to go? Type 'left' or 'right'.\")\n",
         "if step == 'left':\n",
-        "  step = input('swim or wait?')\n",
+        "  step = input(\"You've come to a lake. There is an island in the middle of the lake. Type 'wait' to wait for a boat, or 'swim' to swim across.\")\n",
         "  if step == 'wait':\n",
-        "    step = input('Which door?')\n",
+        "    step = input('You arrive at the island unharmed. There is a house with three doors; on red, one yellow and one blue. Which color do you choose?')\n",
         "    if step.lower() == 'red':\n",
         "      print('Burned by fire. \\nGame over.')\n",
         "    elif step.lower() == 'blue':\n",
