--- a/Day_4.ipynb
+++ b/Day_4.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Day_4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMt0tEQUddZhEixLETykFsm",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOBd65ygsCGcIS6WuyOcXwe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zYIZSschVkbV",
-        "outputId": "33ba8aec-7cd7-4907-eaa2-bc0d768eea04"
+        "outputId": "d843e3d9-26e9-4932-bcf5-83e85b953b95"
       },
       "outputs": [
         {
@@ -54,16 +55,7 @@
           "name": "stdout",
           "text": [
             "What do you choose? Type 0 for Rock, 1 for Paper, 2 for Scissors.\n",
-            "2\n",
-            "\n",
-            "    _______\n",
-            "---'   ____)____\n",
-            "          ______)\n",
-            "       __________)\n",
-            "      (____)\n",
-            "---.__(___)\n",
-            "\n",
-            "Computer chose:\n",
+            "1\n",
             "\n",
             "    _______\n",
             "---'   ____)____\n",
@@ -72,7 +64,16 @@
             "         _______)\n",
             "---.__________)\n",
             "\n",
-            "You win!\n"
+            "Computer chose:\n",
+            "\n",
+            "    _______\n",
+            "---'   ____)____\n",
+            "          ______)\n",
+            "       __________)\n",
+            "      (____)\n",
+            "---.__(___)\n",
+            "\n",
+            "You lose.\n"
           ]
         }
       ],
@@ -107,20 +108,23 @@
         "#Write your code below this line 👇\n",
         "import random\n",
         "options = [rock, paper, scissors]\n",
-        "play = options[int(input(\"What do you choose? Type 0 for Rock, 1 for Paper, 2 for Scissors.\\n\"))]\n",
-        "print(play)\n",
-        "choice = random.choice(options)\n",
-        "print(f\"Computer chose:\\n{choice}\")\n",
-        "if choice == play: \n",
-        "  print(\"It's a draw.\")\n",
-        "elif play == rock and choice == scissors:\n",
-        "  print(\"You win!\")\n",
-        "elif play == scissors and choice == paper:\n",
-        "  print(\"You win!\")\n",
-        "elif play == paper and choice == rock:\n",
-        "  print(\"You win!\")\n",
-        "else:\n",
-        "  print(\"You lose\")"
+        "try:\n",
+        "  play = options[int(input(\"What do you choose? Type 0 for Rock, 1 for Paper, 2 for Scissors.\\n\"))]\n",
+        "  print(play)\n",
+        "  choice = random.choice(options)\n",
+        "  print(f\"Computer chose:\\n{choice}\")\n",
+        "  if choice == play: \n",
+        "    print(\"It's a draw.\")\n",
+        "  elif play == rock and choice == scissors:\n",
+        "    print(\"You win!\")\n",
+        "  elif play == scissors and choice == paper:\n",
+        "    print(\"You win!\")\n",
+        "  elif play == paper and choice == rock:\n",
+        "    print(\"You win!\")\n",
+        "  else:\n",
+        "    print(\"You lose.\")\n",
+        "except:\n",
+        "  print(\"You entered an invalid number.\\nYou lose.\")"
       ]
     }
   ]
